@@ -1,16 +1,20 @@
 package com.project.smartcitylogistics.controller;
 
-import com.project.smartcitylogistics.dto.CourierDTO;
+import com.project.smartcitylogistics.dto.GeoJsonCollection;
+import com.project.smartcitylogistics.entity.Courier;
 import com.project.smartcitylogistics.repository.CourierRepository;
+import com.project.smartcitylogistics.util.GeoJsonMapper;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import lombok.RequiredArgsConstructor;
 import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.GeometryFactory;
 import org.locationtech.jts.geom.Point;
 import org.locationtech.jts.geom.PrecisionModel;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/couriers")
@@ -19,25 +23,24 @@ import java.util.List;
 public class CourierController {
 
     private final CourierRepository courierRepository;
+    private final GeoJsonMapper geoJsonMapper;
     private final GeometryFactory factory = new GeometryFactory(new PrecisionModel(), 4326);
 
     @GetMapping("/nearby")
-    public List<CourierDTO> getNearby(
-            @RequestParam double lat,
-            @RequestParam double lng,
-            @RequestParam(defaultValue = "5000") double radius) {
+    public ResponseEntity<GeoJsonCollection> getNearbyCouriers(
+            @RequestParam double longitude,
+            @RequestParam double latitude,
+            @RequestParam(defaultValue = "5000") double distance) {
 
-        Point searchPoint = factory.createPoint(new Coordinate(lng, lat));
+        Point searchPoint = factory.createPoint(new Coordinate(longitude, latitude));
 
-        return courierRepository.findNearbyCouriers(searchPoint, radius)
-                .stream()
-                .map(c -> new CourierDTO(
-                        c.getId(),
-                        c.getName(),
-                        c.getCurrentLocation().getY(),
-                        c.getCurrentLocation().getX(),
-                        c.getStatus()))
-                .toList();
+        List<Courier> couriers = courierRepository.findNearbyCouriers(searchPoint, distance);
+
+        // Convert List<Courier> to GeoJSON Features
+        var features = couriers.stream()
+                .map(geoJsonMapper::toFeature)
+                .collect(Collectors.toList());
+
+        return ResponseEntity.ok(GeoJsonCollection.of(features));
     }
 }
-
